maintenance, improved pmd statistics